Feature(jQGrid): Select columns component for JqGrid

--- a/data/plugins/jqgrid/less/base/jqgrid.utilities.less
+++ b/data/plugins/jqgrid/less/base/jqgrid.utilities.less
@@ -118,6 +118,31 @@ div.drop-actions {
           }
         }
       }
+
+      &.dd-jqgrid-select-columns {
+        li {
+          padding: 7px;
+        }
+
+        &.dd-jsc-one-item {
+          border-bottom: 1px solid @gray-80;
+        }
+        
+        &.dd-jsc-buttons {
+          border-top: 1px solid @gray-80;
+        }
+
+        &.dd-jsc-checkbox {
+          li {
+            padding: 5px 10px;
+          }
+
+          &.dd-jsc-checkbox-all-columns {
+            max-height: 305px;
+            overflow-y: scroll;
+          }
+        }
+      }
     }
     .dropdown-menu > li > a {
       white-space: normal;
