--- a/data/styles/base/custom/mod_tabs.less
+++ b/data/styles/base/custom/mod_tabs.less
@@ -1,28 +1,36 @@
 
-
-
-
 .nav-tabs {
   border-bottom: 1px solid @brand-primary;
+  padding-bottom: 1px;
+  padding-left: 1px;
   > li {
+    background: white;
+    margin-left: -1px;
     > a {
-      margin-top: 4px;
-      color: #888;
       border: 1px solid @nav-tabs-border-color;
       border-bottom: none;
+      margin: 0;
+      color: @black;
+      border-radius: 0;
+      &:hover {
+        background: @gray-93;
+        border-color: @brand-primary;
+      }
     }
     &.active {
       > a {
-        background-color: #fff;
+        background-color: @brand-primary;
         border-color: @brand-primary;
         border-bottom-color: transparent;
-        padding: 10px 15px;
+        padding: 8px 10px 7px 10px;
         margin-top: 0;
-        box-shadow: 0px -4px 6px -3px rgba(0, 0, 0, .3);
+        box-shadow: none;
+        color: @white;
         &:focus, &:hover {
-          background-color: #fff;
+          background-color: @brand-primary;
           border-color: @brand-primary;
           border-bottom-color: transparent;
+          color: @white;
         }
       }
     }
@@ -30,8 +38,11 @@
 }
 
 .tab-content {
+  border: 1px solid @brand-primary;
+  border-top: 0;
+  padding: 10px;
   &.tab-content-bordered {
     border: 1px solid @brand-primary;
-    border-top:none;
+    border-top: 0;
   }
 }
