--- a/data/styles/base/variables.less
+++ b/data/styles/base/variables.less
@@ -482,7 +482,7 @@
 @nav-disabled-link-hover-color:             @gray-light;
 
 //== Tabs
-@nav-tabs-border-color:                     #ddd;
+@nav-tabs-border-color:                     @brand-primary;
 
 @nav-tabs-link-hover-border-color:          @gray-lighter;
 
