--- a/data/styles/base/dark/variables_dark.less
+++ b/data/styles/base/dark/variables_dark.less
@@ -924,3 +924,23 @@
 @dl-horizontal-breakpoint:    @grid-float-breakpoint;
 //** Horizontal line color.
 @hr-border:                   darken(@body-bg-alt, 5%);
+
+
+//== Error pages
+//
+//##
+@error-number-bgcolor:        @brand-warning;
+@error-number-color:          @white;
+@error-number-distance:       25px;
+@error-number-font-size:      50px;
+@error-number-font-weight:    700;
+@error-number-size:           150px;
+
+@error-title-color:           @black;
+@error-title-font-size:       35px;
+@error-title-font-weight:     700;
+
+@error-message-color:           @gray-46;
+@error-message-font-size:       25px;
+@error-message-font-weight:     400;
+@error-message-link-color:      @blue-hover;
