Refactor(Sidebar): Create init function for sidebar menu

--- a/data/styles/base/custom/custom-variables.less
+++ b/data/styles/base/custom/custom-variables.less
@@ -19,11 +19,11 @@
 
 @sidebar-fontfamily:                    "Open_sans", Helvetica, Arial, sans-serif;
 
-@sidebar-fontweight-first-level:        600;
+@sidebar-fontweight-first-level:        400;
 @sidebar-fontweight-second-level:       600;
 @sidebar-fontweight-third-level:        400;
 
-@sidebar-fontsize-first-level:          @font-size-base;
+@sidebar-fontsize-first-level:          (@font-size-base - 1);
 @sidebar-fontsize-second-level:         (@font-size-base - 2);
 @sidebar-fontsize-third-level:          (@font-size-base - 2);
 
