--- a/data/plugins/prism/less/prism.less
+++ b/data/plugins/prism/less/prism.less
@@ -1,17 +1,16 @@
-/* http://prismjs.com/download.html?themes=prism&languages=markup+css+clike+javascript+coffeescript+less+markdown+nginx+php+sass+scss+sql */
+/* http://prismjs.com/download.html?themes=prism-okaidia&languages=markup+css+clike+javascript+git+less+php+php-extras+sass+scss+twig+typescript */
 /**
- * prism.js default theme for JavaScript, CSS and HTML
- * Based on dabblet (http://dabblet.com)
- * @author Lea Verou
+ * okaidia theme for JavaScript, CSS and HTML
+ * Loosely based on Monokai textmate theme by http://www.monokai.nl/
+ * @author ocodia
  */
 
 code[class*="language-"],
 pre[class*="language-"] {
-	color: black;
+	color: #f8f8f2;
 	background: none;
-	text-shadow: 0 1px white;
+	text-shadow: 0 1px rgba(0, 0, 0, 0.3);
 	font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
-	direction: ltr;
 	text-align: left;
 	white-space: pre;
 	word-spacing: normal;
@@ -29,39 +28,17 @@ pre[class*="language-"] {
 	hyphens: none;
 }
 
-pre[class*="language-"]::-moz-selection, 
-pre[class*="language-"] ::-moz-selection,
-code[class*="language-"]::-moz-selection, 
-code[class*="language-"] ::-moz-selection {
-	text-shadow: none;
-	background: #b3d4fc;
-}
-
-pre[class*="language-"]::selection, 
-pre[class*="language-"] ::selection,
-code[class*="language-"]::selection, 
-code[class*="language-"] ::selection {
-	text-shadow: none;
-	background: #b3d4fc;
-}
-
-@media print {
-	code[class*="language-"],
-	pre[class*="language-"] {
-		text-shadow: none;
-	}
-}
-
 /* Code blocks */
 pre[class*="language-"] {
 	padding: 1em;
 	margin: .5em 0;
 	overflow: auto;
+	border-radius: 0.3em;
 }
 
 :not(pre) > code[class*="language-"],
 pre[class*="language-"] {
-	background: #f5f2f0;
+	background: #272822;
 }
 
 /* Inline code */
@@ -71,66 +48,76 @@ pre[class*="language-"] {
 	white-space: normal;
 }
 
-.token {
-    &.comment,
-    &.prolog,
-    &.doctype,
-    &.cdata {
-	    color: #999;
-    }
-    &.punctuation {
-	    color: #333;
-    }
-    &.property,
-    &.tag,
-    &.boolean,
-    &.number,
-    &.constant,
-    &.symbol,
-    &.deleted {
-	    color: #96281B;
-    }
-    &.selector,
-    &.attr-name,
-    &.string,
-    &.char,
-    &.builtin,
-    &.inserted {
-	    color: #d44950;
-    }
-    &.operator,
-    &.entity,
-    &.url,
-    .language-css &.string,
-    .style &.string {
-	    color: #a67f59;
-	    background: hsla(0, 0%, 100%, .5);
-    }
-    &.atrule,
-    &.attr-value,
-    &.keyword {
-	    color: #07a;
-    }
-    &.function {
-	    color: #DD4A68;
-    }
-    &.regex,
-    &.important,
-    &.variable {
-	    color: #e90;
-    }
-    &.important,
-    &.bold {
-	    font-weight: bold;
-    }
-    &.italic {
-	    font-style: italic;
-    }
-    &.entity {
-	    cursor: help;
-    }
+.token.comment,
+.token.prolog,
+.token.doctype,
+.token.cdata {
+	color: slategray;
+}
+
+.token.punctuation {
+	color: #f8f8f2;
 }
 
 .namespace {
 	opacity: .7;
 }
+
+.token.property,
+.token.tag,
+.token.constant,
+.token.symbol,
+.token.deleted {
+	color: #f92672;
+}
+
+.token.boolean,
+.token.number {
+	color: #ae81ff;
+}
+
+.token.selector,
+.token.attr-name,
+.token.string,
+.token.char,
+.token.builtin,
+.token.inserted {
+	color: #a6e22e;
+}
+
+.token.operator,
+.token.entity,
+.token.url,
+.language-css .token.string,
+.style .token.string,
+.token.variable {
+	color: #f8f8f2;
+}
+
+.token.atrule,
+.token.attr-value,
+.token.function {
+	color: #e6db74;
+}
+
+.token.keyword {
+	color: #66d9ef;
+}
+
+.token.regex,
+.token.important {
+	color: #fd971f;
+}
+
+.token.important,
+.token.bold {
+	font-weight: bold;
+}
+.token.italic {
+	font-style: italic;
+}
+
+.token.entity {
+	cursor: help;
+}
+
