Feature(Layout): Added code section

--- a/data/styles/base/custom/custom-presentation.less
+++ b/data/styles/base/custom/custom-presentation.less
@@ -1,6 +1,6 @@
 @import "../variables.less";
 
-@selected-tab-color: #112236; // Appears 8 times
+@selected-tab-color: #112236;
 
 .show-panel.code-example {
   border:0;
