Modified style for UI KIT footer panel

--- a/data/styles/base/dark/custom_variables_dark.less
+++ b/data/styles/base/dark/custom_variables_dark.less
@@ -103,6 +103,15 @@
 @panel-title-padding:         10px 15px;
 @panel-toolbox-padding:       8px 15px 7px;
 
+@panel-body-padding:          15px 0;
+@panel-body-margin:           0 15px;
+@show-panel-body-padding:     15px;
+@show-panel-footer-padding:   15px;
+
+@panel-footer-bg:             @white;
+@panel-footer-padding:        10px 0;
+@panel-footer-margin:         0 15px;
+
 ///* PROGRESS BARS */
 
 @internal-padding:            2px;
