--- a/data/styles/base/custom/custom-utilities.less
+++ b/data/styles/base/custom/custom-utilities.less
@@ -138,11 +138,11 @@
       margin-bottom: 0;
     }
     .show-panel-body {
-      padding: @panel-body-padding;
+      padding: @show-panel-body-padding;
       &:extend(.clearfix all);
     }
     .show-panel-footer {
-      padding: @panel-footer-padding;
+      padding: @show-panel-footer-padding;
       background-color: @panel-footer-bg;
       border-top: 1px solid @panel-inner-border;
       .border-bottom-radius((@panel-border-radius - 1));
