--- a/data/styles/base/custom/mod_widget.less
+++ b/data/styles/base/custom/mod_widget.less
@@ -63,6 +63,7 @@
 // panel contents
 .panel-body {
   padding: @panel-body-padding;
+  margin: @panel-body-margin;
   .clearfix();
   + .panel-body {
       border-top: 1px solid @panel-inner-border;
@@ -237,6 +238,7 @@
 .panel-footer {
   .clearfix();
   padding: @panel-footer-padding;
+  margin: @panel-footer-margin;
   background-color: @panel-footer-bg;
   border-top: 1px solid @panel-inner-border;
   .border-bottom-radius((@panel-border-radius - 1));
