Feature(Modals): Error and confirmation modals

--- a/data/styles/base/custom/mod_modal.less
+++ b/data/styles/base/custom/mod_modal.less
@@ -34,3 +34,21 @@
   }
 }
 
+///* ALERT MODALS */
+.modal.modal-alert {
+  .modal-dialog{
+    box-shadow: 0 0 30px -5px rgba(0,0,0,.1);
+
+    .modal-body {
+      padding: 20px;
+
+      .alert-modal-title {
+        font-weight: 700;
+        margin-bottom: 20px;
+      }
+      .alert-modal-content {
+        margin-bottom: 15px;
+      }
+    }
+  }
+}
