BugFix(TreeType): TreeInput disabled example

--- a/data/styles/base/custom/custom-utilities.less
+++ b/data/styles/base/custom/custom-utilities.less
@@ -719,3 +719,16 @@
   font-size: @error-message-font-size;
   font-weight: @error-message-font-weight;
 }
+
+.fancytree-disabled {
+  -webkit-filter: grayscale(100%);
+  filter: grayscale(100%);
+
+  .fancytree-plain.fancytree-container {
+    span.fancytree-title {
+      &:hover {
+        background: transparent;
+      }
+    }
+  }
+}
