--- a/data/styles/base/dark/custom_variables_dark.less
+++ b/data/styles/base/dark/custom_variables_dark.less
@@ -103,7 +103,7 @@
 @panel-title-padding:         10px 15px;
 @panel-toolbox-padding:       8px 15px 7px;
 
-@panel-body-padding:          15px 0;
+@panel-body-padding:          15px;
 @panel-body-margin:           0 15px;
 @show-panel-body-padding:     15px;
 @show-panel-footer-padding:   15px;
