--- a/data/plugins/jqgrid/less/base/jqgrid.pager.less
+++ b/data/plugins/jqgrid/less/base/jqgrid.pager.less
@@ -206,3 +206,15 @@
   padding: 0 5px;
 }
 
+.ui-jqgrid-toppager {
+  background:@white;
+}
+.ui-jqgrid {
+  .ui-jqgrid-toppager {
+    border-bottom: 1px solid @gray-76;
+    .ui-pg-input {
+      height: @height-buttons;
+      width: @width-buttons;
+    }
+  }
+}
