Feature(Layout): Update eMAG Apps UI KIT demo

--- a/data/styles/base/custom/custom-presentation.less
+++ b/data/styles/base/custom/custom-presentation.less
@@ -29,9 +29,16 @@
       height:45px;
       margin-right:-15px;
       padding: 0 15px;
+      background: @gray-96;
       i+i {
         margin-left: 5px;
       }
+    }
+    .btn-source:focus{
+      outline: none;
+    }
+    .btn-source.collapsed{
+      background: @white;
     }
     h4 {
       margin: 0;
@@ -69,6 +76,7 @@
   border-top-color: transparent;
   padding-left: 15px;
   padding-right: 15px;
+  background: white;
   &:hover {
     background: #f6f6f6;
     border-color: @gray-80;
