--- a/data/styles/base/custom/mod_modal.less
+++ b/data/styles/base/custom/mod_modal.less
@@ -22,15 +22,27 @@
 .modal-feedback {
   &.has-info {
     .modal-feedback-variations(@brand-info);
+    .modal-title{
+      color: @white;
+    }
   }
   &.has-success {
     .modal-feedback-variations(@brand-success);
+    .modal-title{
+      color: @white;
+    }
   }
   &.has-warning {
     .modal-feedback-variations(@brand-warning);
+    .modal-title{
+      color: @white;
+    }
   }
   &.has-error {
     .modal-feedback-variations(@brand-danger);
+    .modal-title{
+      color: @white;
+    }
   }
 }
 
