--- a/data/styles/base/custom/mod_popovers.less
+++ b/data/styles/base/custom/mod_popovers.less
@@ -151,6 +151,7 @@
   .popover-title {
     background: @brand-danger;
     border-bottom: 1px solid #d42e2a;
+    color: @white;
   }
 }
 
@@ -197,6 +198,7 @@
   .popover-title {
     background: @brand-warning;
     border-bottom: 1px solid #eaad50;
+    color: @white;
   }
 }
 
@@ -243,6 +245,7 @@
   .popover-title {
     background: @black;
     border-bottom: 1px solid #2d2d2d;
+    color: @white;
   }
 }
 
