--- a/data/styles/base/variables.less
+++ b/data/styles/base/variables.less
@@ -63,7 +63,7 @@
 //** Background color for contrasting elements.
 @body-bg-alt:           #fff;
 //** Global text color on `<body>`.
-@text-color:            @gray-dark;
+@text-color:            @black;
 //** Global textual link color.
 @link-color:            @brand-primary;
 //** Link hover color set via `darken()` function.
