Feature(Layout): Update eMAG Apps UI KIT demo

--- a/data/styles/base/custom/custom-presentation.less
+++ b/data/styles/base/custom/custom-presentation.less
@@ -40,12 +40,15 @@
     .btn-source.collapsed{
       background: @white;
     }
+    .btn-source.collapsed:hover{
+      background: @gray-96;
+    }
     h4 {
       margin: 0;
     }
     .module-description {
       h4 {
-        color: #999999;
+        color: @black;
         font-size:15px;
         line-height: 28px;
         margin: 8px 0 0 0;
