--- a/data/styles/base/dark/variables_dark.less
+++ b/data/styles/base/dark/variables_dark.less
@@ -621,7 +621,7 @@
 //##
 
 //** Default label background color
-@label-default-bg:            @gray-light;
+@label-default-bg:            @gray-76;
 //** Primary label background color
 @label-primary-bg:            @brand-primary;
 //** Success label background color
@@ -638,6 +638,8 @@
 //** Default text color of a linked label
 @label-link-hover-color:      #fff;
 
+@label-font-size:             75%;
+@label-border-radius:          0.5em;
 
 //== Modals
 //
@@ -835,6 +837,7 @@
 //** Badge background color in active nav link
 @badge-active-bg:             #fff;
 
+@badge-font-size:             75%;
 @badge-font-weight:           bold;
 @badge-line-height:           1;
 @badge-border-radius:         10px;
