--- a/data/styles/base/custom/custom-presentation.less
+++ b/data/styles/base/custom/custom-presentation.less
@@ -3,53 +3,63 @@
 @selected-tab-color: #112236;
 
 .show-panel.code-example {
-  border:0;
+  border: 0;
 }
+
 .show-panel {
-  &:not(pre)>code[class*="language-"] {
+  &:not(pre) > code[class*="language-"] {
     background: @selected-tab-color;
-    border:0;
+    border: 0;
   }
   pre[class*="language-"] {
     background: @selected-tab-color;
-    border:0;
+    border: 0;
   }
 }
+
 .code-container {
-  margin-left:-15px;
-  margin-right:-15px;
+  margin-left: -15px;
+  margin-right: -15px;
 }
+
 .show-panel-body.code-example {
   .code-header {
-    border-bottom:1px solid @gray-80;
-    margin:20px 0 0 0;
+    border-bottom: 1px solid @gray-80;
+    margin: 20px 0 0 0;
+
     .btn-source {
-      border:0;
-      color:@brand-primary;
-      height:45px;
-      margin-right:-15px;
+      border: 0;
+      color: @brand-primary;
+      height: 45px;
+      margin-right: -15px;
       padding: 0 15px;
       background: @gray-96;
-      i+i {
+
+      i + i {
         margin-left: 5px;
       }
     }
-    .btn-source:focus{
+
+    .btn-source:focus {
       outline: none;
     }
-    .btn-source.collapsed{
+
+    .btn-source.collapsed {
       background: @white;
     }
-    .btn-source.collapsed:hover{
+
+    .btn-source.collapsed:hover {
       background: @gray-96;
     }
+
     h4 {
       margin: 0;
     }
+
     .module-description {
       h4 {
         color: @black;
-        font-size:15px;
+        font-size: 15px;
         line-height: 28px;
         margin: 8px 0 0 0;
       }
@@ -63,16 +73,17 @@
   padding-bottom: 1px;
   padding-left: 1px;
 }
-.nav-tabs.code-example>li {
+
+.nav-tabs.code-example > li {
   background: white;
   margin-left: -1px;
-  border:0;
-  border-right:1px solid @gray-80;
+  border: 0;
+  border-right: 1px solid @gray-80;
 }
 
 .nav-tabs.code-example > li > a {
   border: 0;
-  border-top:1px solid transparent;
+  border-top: 1px solid transparent;
   margin: 0;
   color: @brand-primary;
   border-radius: 0;
@@ -80,6 +91,7 @@
   padding-left: 15px;
   padding-right: 15px;
   background: white;
+
   &:hover {
     background: #f6f6f6;
     border-color: @gray-80;
@@ -87,7 +99,7 @@
   }
 }
 
-.nav-tabs.code-example>li.active>a {
+.nav-tabs.code-example > li.active > a {
   background-color: @selected-tab-color;
   border-color: @gray-80;
   border-bottom: 1px solid @selected-tab-color;
@@ -96,6 +108,7 @@
   color: white;
   margin-top: 0;
   padding: 8px 15px 7px 15px;
+
   &:focus {
     background-color: @selected-tab-color;
     border-color: @gray-80;
@@ -103,6 +116,7 @@
     border-top-color: transparent;
     color: white;
   }
+
   &:hover {
     background-color: @selected-tab-color;
     border-color: @gray-80;
@@ -112,10 +126,11 @@
   }
 }
 
-.nav-tabs.code-example>li.active{
+.nav-tabs.code-example > li.active {
   border-right: 1px solid transparent;
+
   &:hover {
-    border:0;
+    border: 0;
     border-right: 1px solid transparent;
   }
 }
@@ -125,7 +140,7 @@
   border-top: 0;
   padding: 10px;
   background: #112236;
-  color:#fff
+  color: #fff
 }
 
 .nav-tabs.code-example > li a,
@@ -133,15 +148,15 @@
 .nav-tabs.code-example > li a:focus,
 .nav-tabs.code-example > li.active a,
 .nav-tabs.code-example > li.active a:hover,
-.nav-tabs.code-example > li.active a:focus{
+.nav-tabs.code-example > li.active a:focus {
   border-left-color: transparent;
 }
+
 .nav-tabs.code-example > li + li a,
 .nav-tabs.code-example > li + li a:hover,
 .nav-tabs.code-example > li + li a:focus,
 .nav-tabs.code-example > li + li.active a,
 .nav-tabs.code-example > li + li.active a:hover,
-.nav-tabs.code-example > li + li.active a:focus
-{
+.nav-tabs.code-example > li + li.active a:focus {
   border-left-color: @gray-80;
 }
