--- a/data/styles/base/alerts.less
+++ b/data/styles/base/alerts.less
@@ -60,6 +60,10 @@
   .alert-variant(@alert-success-bg; @alert-success-border; @alert-success-text);
 }
 
+.alert-success-full-color {
+  .alert-variant(@alert-success-full-color-bg; @alert-success-full-color-border; @alert-success-full-color-text);
+}
+
 .alert-info {
   .alert-variant(@alert-info-bg; @alert-info-border; @alert-info-text);
 }
@@ -70,4 +74,8 @@
 
 .alert-danger {
   .alert-variant(@alert-danger-bg; @alert-danger-border; @alert-danger-text);
+}
+
+.alert-black {
+  .alert-variant(@alert-black-bg; @alert-black-border; @alert-black-text);
 }
