Feature(Notifications): Update basic and auto dismissable notifications

--- a/data/styles/base/custom/custom-utilities.less
+++ b/data/styles/base/custom/custom-utilities.less
@@ -745,7 +745,7 @@
   &.alert-success-full-color {
     button.close {
       .fa {
-        color: @black;
+        color: @white;
       }
     }
   }
