--- a/data/styles/base/custom/custom-utilities.less
+++ b/data/styles/base/custom/custom-utilities.less
@@ -1,7 +1,7 @@
 ///* Positioning paddings: */
 ///* START */
 .generate-paddings(5);
-.generate-paddings(@n, @i: 1) when (@i =< 20) {
+.generate-paddings(@n, @i: 1) when (@i =< 10) {
   @x: (@i*5);
   .pad-top-@{x} {
     padding-top: (@i * 5px) !important;
@@ -28,7 +28,7 @@
 ///* Positioning margins: */
 ///* START */
 .generate-margins(5);
-.generate-margins(@n, @i: 1) when (@i =< 20) {
+.generate-margins(@n, @i: 1) when (@i =< 10) {
   @x: (@i*5);
   .mg-top-@{x} {
     margin-top: (@i * 5px) !important;
@@ -39,6 +39,10 @@
   .mg-sep-@{x} {
     margin-top: (@i * 5px) !important;
     margin-bottom: (@i * 5px) !important;
+  }
+  .mg-left-right-@{x} {
+    margin-left: (@i * 5px) !important;
+    margin-right: (@i * 5px) !important;
   }
   .mg-@{x} {
     margin: (@x * 1px) !important;
@@ -612,6 +616,10 @@
 
 .no-margin {
   margin: 0 !important;
+}
+
+.no-border {
+  border: 0 !important;
 }
 
 .no-border-top {
