Feature(Layout): Demo for adding form

--- a/data/plugins/fancytree/less/ui.fancytree.less
+++ b/data/plugins/fancytree/less/ui.fancytree.less
@@ -293,12 +293,19 @@ table.fancytree-ext-table {
 }
 
 .hide-with-opacity {
-    display: inline;
+    display: block;
     position: absolute;
     opacity: 0;
     width: 0;
     height: 1px;
-    visibility: hidden;
+
+  	select {
+		display: block;
+		position: absolute;
+		opacity: 0;
+		width: 0;
+		height: @input-height-base!important;
+	}
 }
 
 .fancytree-visibility-none .fancytree-expander {
