--- a/data/styles/base/custom/custom-fixes.less
+++ b/data/styles/base/custom/custom-fixes.less
@@ -171,3 +171,11 @@ i {
   position: relative;
   top: -1px;
 }
+
+.chosen-select {
+  display: block!important;
+  position: absolute;
+  opacity: 0;
+  width: 0;
+  height: @input-height-base!important;
+}
