Feature(Layout): Added code section

--- a/data/styles/base/custom/custom-fixes.less
+++ b/data/styles/base/custom/custom-fixes.less
@@ -171,3 +171,14 @@ i {
   position: relative;
   top: -1px;
 }
+
+.title-anchor {
+  pointer-events: none;
+  opacity: 0;
+  height: 0;
+  font-size: 0;
+  line-height: 0;
+  top: -30px;
+  position: relative;
+  display:block;
+}
