Feature(HierarchicalSelect): Add the HierarchicalSelect plugin to UI KIT

--- a/data/styles/base/custom/custom-fixes.less
+++ b/data/styles/base/custom/custom-fixes.less
@@ -179,3 +179,19 @@ i {
   width: 0;
   height: @input-height-base!important;
 }
+
+.hide-with-opacity {
+  display: block;
+  position: absolute;
+  opacity: 0;
+  width: 0;
+  height: 1px;
+
+  select {
+    display: block;
+    position: absolute;
+    opacity: 0;
+    width: 0;
+    height: @input-height-base!important;
+  }
+}
