Improvement(TreeType): TreeType open when icon is clicked

--- a/data/styles/base/custom/mod_form_elements.less
+++ b/data/styles/base/custom/mod_form_elements.less
@@ -314,6 +314,10 @@ input[type="radio"] {
       background: none;
       cursor: default;
 
+      &.cursor-pointer {
+        cursor: pointer;
+      }
+
       > .form-radio-control, > .form-checkbox-control {
         margin-top: 2px!important;
       }
