Improvement(Notifications): Notifications changes

--- a/data/styles/base/alerts.less
+++ b/data/styles/base/alerts.less
@@ -68,12 +68,24 @@
   .alert-variant(@alert-info-bg; @alert-info-border; @alert-info-text);
 }
 
+.alert-info-full-color {
+  .alert-variant(@alert-info-full-color-bg; @alert-info-full-color-border; @alert-info-full-color-text);
+}
+
 .alert-warning {
   .alert-variant(@alert-warning-bg; @alert-warning-border; @alert-warning-text);
 }
 
+.alert-warning-full-color {
+  .alert-variant(@alert-warning-full-color-bg; @alert-warning-full-color-border; @alert-warning-full-color-text);
+}
+
 .alert-danger {
   .alert-variant(@alert-danger-bg; @alert-danger-border; @alert-danger-text);
+}
+
+.alert-danger-full-color {
+  .alert-variant(@alert-danger-full-color-bg; @alert-danger-full-color-border; @alert-danger-full-color-text);
 }
 
 .alert-black {
