--- a/data/styles/base/custom/custom-utilities.less
+++ b/data/styles/base/custom/custom-utilities.less
@@ -770,6 +770,14 @@
     }
   }
 
+  &.alert-info-full-color {
+    button.close {
+      .fa {
+        color: @white;
+      }
+    }
+  }
+
   &.alert-warning {
     .fa {
       color: @state-warning-text;
@@ -782,6 +790,14 @@
     }
   }
 
+  &.alert-warning-full-color {
+    button.close {
+      .fa {
+        color: @white;
+      }
+    }
+  }
+
   &.alert-danger {
     .fa {
       color: @state-danger-text;
@@ -790,6 +806,14 @@
     button.close {
       .fa {
         color: @black;
+      }
+    }
+  }
+
+  &.alert-danger-full-color {
+    button.close {
+      .fa {
+        color: @white;
       }
     }
   }
