--- a/data/styles/base/variables.less
+++ b/data/styles/base/variables.less
@@ -695,13 +695,25 @@
 @alert-info-text:             @black;
 @alert-info-border:           @state-info-border;
 
+@alert-info-full-color-bg:        @state-info-border;
+@alert-info-full-color-text:      @white;
+@alert-info-full-color-border:    @state-info-border;
+
 @alert-warning-bg:            @state-warning-bg;
 @alert-warning-text:          @black;
 @alert-warning-border:        @state-warning-border;
 
+@alert-warning-full-color-bg:     @state-warning-border;
+@alert-warning-full-color-text:   @white;
+@alert-warning-full-color-border: @state-warning-border;
+
 @alert-danger-bg:             @state-danger-bg;
 @alert-danger-text:           @black;
 @alert-danger-border:         @state-danger-border;
+
+@alert-danger-full-color-bg:      @state-danger-border;
+@alert-danger-full-color-text:    @white;
+@alert-danger-full-color-border:  @state-danger-border;
 
 @alert-black-bg:              @gray-20;
 @alert-black-text:            @white;
