Feature(Layout): Added validation states for input fields

--- a/data/styles/base/custom/custom-fixes.less
+++ b/data/styles/base/custom/custom-fixes.less
@@ -206,3 +206,8 @@ i {
     height: @input-height-base!important;
   }
 }
+
+/*Fix for File upload border*/
+.input-group .input-group-btn {
+  z-index: 1;
+}
