--- a/data/styles/lib/jquery_ui/less/base.less
+++ b/data/styles/lib/jquery_ui/less/base.less
@@ -33,6 +33,6 @@
 @import "selectmenu.less";
 @import "sortable.less";
 @import "slider.less";
-@import "spinner.less";
+@import "custom/custom-spinner.less";
 //@import "tabs.less";
 //@import "tooltip.less";
