--- a/data/styles/base/custom/custom-mixins.less
+++ b/data/styles/base/custom/custom-mixins.less
@@ -7,3 +7,21 @@
   @-moz-keyframes @name { @arguments();}
   @keyframes @name { @arguments();}
 }
+
+
+// Form validation states
+//
+// Used in mod_form_elements.less to generate the form validation CSS for warnings, errors,
+// and successes.
+.mod-form-control-validation( @background-color: #f5f5f5) {
+  .input-group {
+    &.input-group-no-separation {
+      .input-group-addon {
+        background-color: @background-color;
+        &[disabled] {
+          background-color: @background-color;
+        }
+      }
+    }
+  }
+}
