--- a/data/styles/base/custom/mod_form_elements.less
+++ b/data/styles/base/custom/mod_form_elements.less
@@ -362,3 +362,15 @@ select.form-control {
 .form-control[disabled] {
   color: @gray-80;
 }
+
+.checkbox-inline {
+  label {
+    font-weight: normal;
+  }
+}
+
+.radio-inline {
+  label {
+    font-weight: normal;
+  }
+}
