Feature(Layout): Implement color scheme for navbar and sidebar

--- a/data/styles/base/custom/custom-mixins.less
+++ b/data/styles/base/custom/custom-mixins.less
@@ -25,3 +25,69 @@
     }
   }
 }
+
+//generate sidebar colors
+.sidebar-color( @text-color; @background-color) {
+  &.sidebar-min .sidebar-inner > .menu-item.active:hover > a {
+    color: @white
+  }
+
+  .sidebar-inner .menu-item.active.menu-item-has-children > a,
+  &.sidebar-min .sidebar-inner > .menu-item.active > .menu-item-data > .menu-item-min-link,
+  &.sidebar-min .sidebar-inner > .menu-item.active:hover > .menu-item-data > .menu-item-min-link,
+  .sidebar-inner .menu-item .menu-item-data .sidebar-submenu > .menu-item.active.menu-item-has-children > a,
+  .sidebar-inner .menu-item .menu-item-data .sidebar-submenu > .menu-item.active:not(.menu-item-has-children) > a,
+  .sidebar-inner .menu-item .menu-item-data .sidebar-submenu > .menu-item .sidebar-submenu .menu-item.active > a {
+    background-color: @background-color;
+  }
+
+  .sidebar-inner .menu-item a:active,
+  .sidebar-inner .menu-item a:focus,
+  .sidebar-inner .menu-item a:hover,
+  &.sidebar-min .sidebar-inner > .menu-item:hover > a,
+  &.sidebar-min .sidebar-inner > .menu-item:hover > .menu-item-data > .menu-item-min-link,
+  .sidebar-inner .menu-item .menu-item-data .sidebar-submenu > .menu-item:not(.active) > a:active,
+  .sidebar-inner .menu-item .menu-item-data .sidebar-submenu > .menu-item:not(.active) > a:focus,
+  .sidebar-inner .menu-item .menu-item-data .sidebar-submenu > .menu-item:not(.active) > a:hover,
+  .sidebar-inner .menu-item .menu-item-data .sidebar-submenu > .menu-item .sidebar-submenu .menu-item:not(.active) > a:active,
+  .sidebar-inner .menu-item .menu-item-data .sidebar-submenu > .menu-item .sidebar-submenu .menu-item:not(.active) > a:focus,
+  .sidebar-inner .menu-item .menu-item-data .sidebar-submenu > .menu-item .sidebar-submenu .menu-item:not(.active) > a:hover,
+  .sidebar-control .sidebar-toggle .btn-link:hover {
+    color: @text-color;
+  }
+}
+
+//generate navbar colors
+.navbar-color( @background-color; @background-color-hover; @border-color ) {
+  & {
+    background-color: @background-color;
+    border-color: @border-color;
+    border-bottom: 1px solid @border-color;
+  }
+
+  .navbar-nav > .open > a,
+  .navbar-nav > .open > a:focus,
+  .navbar-nav > .open > a:hover,
+  .navbar-nav > li > a:focus,
+  .navbar-nav > li > a:hover {
+    background-color:  @background-color-hover;
+  }
+
+  .navbar-brand {
+    border-right: 1px solid @border-color;
+  }
+
+  @media (min-width: 768px) {
+    .navbar-nav > li:first-child {
+      border-left: 1px solid @border-color;
+    }
+
+    .navbar-nav > li {
+      border-right: 1px solid @border-color;
+    }
+  }
+
+  .nav-search input[type=text]:focus + div button {
+    color: @background-color;
+  }
+}
