--- a/data/styles/base/custom/mod_sidebar.less
+++ b/data/styles/base/custom/mod_sidebar.less
@@ -480,3 +480,27 @@
 .navbar-fixed-top + .main-container {
     padding-top: @navbar-height;
 }
+
+.sidebar-inverse {
+  .sidebar-color(#000000, #000000);
+}
+
+.sidebar-blue {
+  .sidebar-color(#005eb7; #005eb7);
+}
+
+.sidebar-green {
+  .sidebar-color(#38833a; #38833a);
+}
+
+.sidebar-purple {
+  .sidebar-color(#ad46ae; #ad46ae);
+}
+
+.sidebar-cyan {
+  .sidebar-color(#008299; #008299);
+}
+
+.sidebar-brown {
+  .sidebar-color(#a1887f; #a1887f);
+}
