Feature(Layout): Implement color scheme for navbar and sidebar

--- a/data/styles/base/custom/custom-variables.less
+++ b/data/styles/base/custom/custom-variables.less
@@ -51,6 +51,38 @@
 @sidebar-tooltip-preview-bg:            #fff;
 @sidebar-tooltip-preview-text-color:    @black;
 
+
+@sidebar-inverse-color:                 @black;
+@sidebar-blue-color:                    @brand-primary;
+@sidebar-green-color:                   @brand-success;
+@sidebar-purple-color:                  #ad46ae;
+@sidebar-cyan-color:                    #008299;
+@sidebar-brown-color:                   #a1887f;
+
+///* NAVBAR */
+
+@navbar-inverse-border-color:           #424242;
+
+@navbar-blue-background-color:          @brand-primary;
+@navbar-blue-background-color-hover:    #004280;
+@navbar-blue-border-color:              #0084ff;
+
+@navbar-green-background-color:         @brand-success;
+@navbar-green-background-color-hover:   #204a21;
+@navbar-green-border-color:             #4db250;
+
+@navbar-purple-background-color:        #ad46ae;
+@navbar-purple-background-color-hover:  #742f75;
+@navbar-purple-border-color:            #d958db;
+
+@navbar-cyan-background-color:          #008299;
+@navbar-cyan-background-color-hover:    #005261;
+@navbar-cyan-border-color:              #00bfe0;
+
+@navbar-brown-background-color:         #a1887f;
+@navbar-brown-background-color-hover:   #695853;
+@navbar-brown-border-color:             #e8c4b7;
+
 ///* FOOTER */
 
 @footer-minheight:            @sidebar-cell-height;;
