--- a/data/styles/base/custom/mod_navbar.less
+++ b/data/styles/base/custom/mod_navbar.less
@@ -261,7 +261,6 @@
     }
 }
 
-@navbar-inverse-border-color: #424242;
 .navbar-inverse .navbar-text,
 .navbar-inverse .navbar-nav > li > a {
   color: @white;
@@ -322,21 +321,21 @@
 }
 
 .navbar-blue {
-  .navbar-color(#005eb7, #004280, #0084ff);
+  .navbar-color(@navbar-blue-background-color, @navbar-blue-background-color-hover, @navbar-blue-border-color);
 }
 
 .navbar-green {
-  .navbar-color(#38833a, #204a21, #4db250);
+  .navbar-color(@navbar-green-background-color, @navbar-green-background-color-hover, @navbar-green-border-color);
 }
 
 .navbar-purple {
-  .navbar-color(#ad46ae, #742f75, #d958db);
+  .navbar-color(@navbar-purple-background-color, @navbar-purple-background-color-hover, @navbar-purple-border-color);
 }
 
 .navbar-cyan {
-  .navbar-color(#008299, #005261, #00bfe0);
+  .navbar-color(@navbar-cyan-background-color, @navbar-cyan-background-color-hover, @navbar-cyan-border-color);
 }
 
 .navbar-brown {
-  .navbar-color(#a1887f, #695853, #e8c4b7);
+  .navbar-color(@navbar-brown-background-color, @navbar-brown-background-color-hover, @navbar-brown-border-color);
 }
