--- a/data/styles/base/custom/mod_sidebar.less
+++ b/data/styles/base/custom/mod_sidebar.less
@@ -482,25 +482,25 @@
 }
 
 .sidebar-inverse {
-  .sidebar-color(#000000, #000000);
+  .sidebar-color(@sidebar-inverse-color, @sidebar-inverse-color);
 }
 
 .sidebar-blue {
-  .sidebar-color(#005eb7; #005eb7);
+  .sidebar-color(@sidebar-blue-color; @sidebar-blue-color);
 }
 
 .sidebar-green {
-  .sidebar-color(#38833a; #38833a);
+  .sidebar-color(@sidebar-green-color; @sidebar-green-color);
 }
 
 .sidebar-purple {
-  .sidebar-color(#ad46ae; #ad46ae);
+  .sidebar-color(@sidebar-purple-color; @sidebar-purple-color);
 }
 
 .sidebar-cyan {
-  .sidebar-color(#008299; #008299);
+  .sidebar-color(@sidebar-cyan-color; @sidebar-cyan-color);
 }
 
 .sidebar-brown {
-  .sidebar-color(#a1887f; #a1887f);
+  .sidebar-color(@sidebar-brown-color; @sidebar-brown-color);
 }
