--- a/data/styles/base/custom/mod_navbar.less
+++ b/data/styles/base/custom/mod_navbar.less
@@ -273,7 +273,7 @@
 }
 
 .navbar-inverse .form-control,
-.navbar .nav-search .form-control:focus,
+.navbar-inverse .nav-search .form-control:focus,
 .navbar-inverse .input-group-btn .btn
 {
   border-color: @white;
