Feature(Layout): Implement color scheme for navbar and sidebar

--- a/data/styles/base/custom/custom-mixins.less
+++ b/data/styles/base/custom/custom-mixins.less
@@ -90,4 +90,8 @@
   .nav-search input[type=text]:focus + div button {
     color: @background-color;
   }
+
+  .navbar-collapse, .navbar-inverse .navbar-form{
+    border-color: @border-color;
+  }
 }
