Feature(Layout): Implement color scheme for navbar and sidebar

--- a/data/styles/base/custom/custom-mixins.less
+++ b/data/styles/base/custom/custom-mixins.less
@@ -85,6 +85,10 @@
     .navbar-nav > li {
       border-right: 1px solid @border-color;
     }
+
+    .navbar-nav>li:last-child{
+      border-right: none;
+    }
   }
 
   .nav-search input[type=text]:focus + div button {
@@ -94,4 +98,6 @@
   .navbar-collapse, .navbar-inverse .navbar-form{
     border-color: @border-color;
   }
+
+
 }
