Feature(Layout): Implement color scheme for navbar and sidebar

--- a/data/styles/base/custom/custom-variables.less
+++ b/data/styles/base/custom/custom-variables.less
@@ -52,7 +52,7 @@
 @sidebar-tooltip-preview-text-color:    @black;
 
 
-@sidebar-inverse-color:                 @black;
+@sidebar-inverse-color:                 #222222;
 @sidebar-blue-color:                    @brand-primary;
 @sidebar-green-color:                   @brand-success;
 @sidebar-purple-color:                  #ad46ae;
