--- a/data/styles/base/custom/mod_sidebar.less
+++ b/data/styles/base/custom/mod_sidebar.less
@@ -482,7 +482,7 @@
 }
 
 .sidebar-inverse {
-  .sidebar-color(@sidebar-inverse-color, @sidebar-inverse-color);
+  .sidebar-color(@black, @sidebar-inverse-color);
 }
 
 .sidebar-blue {
