Added charts and stats page

--- a/data/styles/base/custom/custom-setup.less
+++ b/data/styles/base/custom/custom-setup.less
@@ -9,6 +9,7 @@
 
 ///* External Plugins */
 @import "../../../plugins/nprogress/less/nprogress.less";
+@import "value-box.less";
 
 ///* Components */
 @import "mod_navbar.less";
