Added color scheme

--- a/data/styles/base/custom/custom-mixins.less
+++ b/data/styles/base/custom/custom-mixins.less
@@ -35,6 +35,7 @@
   .sidebar-inner .menu-item.active.menu-item-has-children > a,
   &.sidebar-min .sidebar-inner > .menu-item.active > .menu-item-data > .menu-item-min-link,
   &.sidebar-min .sidebar-inner > .menu-item.active:hover > .menu-item-data > .menu-item-min-link,
+  .sidebar-inner .menu-item.active:not(.menu-item-has-children)>a,
   .sidebar-inner .menu-item .menu-item-data .sidebar-submenu > .menu-item.active.menu-item-has-children > a,
   .sidebar-inner .menu-item .menu-item-data .sidebar-submenu > .menu-item.active:not(.menu-item-has-children) > a,
   .sidebar-inner .menu-item .menu-item-data .sidebar-submenu > .menu-item .sidebar-submenu .menu-item.active > a {
