BugFix(Chosen): Fixed input field width in autocomplete single

--- a/data/plugins/chosen/less/custom-jQuery.chosen.less
+++ b/data/plugins/chosen/less/custom-jQuery.chosen.less
@@ -20,6 +20,10 @@
   }
 }
 
+.chosen-container-single .chosen-search input[type="text"] {
+  width: 100% !important;
+}
+
 // Feedback states
 .has-success {
   .chosen-form-control-validation(@state-success-text; @state-success-bg);
