Feature(Layout): Removed validation backgrounds

--- a/data/plugins/chosen/less/custom-jQuery.chosen.less
+++ b/data/plugins/chosen/less/custom-jQuery.chosen.less
@@ -7,6 +7,8 @@
 .chosen-container-multi {
   .chosen-choices {
     padding-left: 5px;
+    box-shadow: none;
+    -webkit-box-shadow: none;
     li.search-choice {
       background-color: @white;
       box-shadow: none;
@@ -46,15 +48,15 @@
 
 // Feedback states
 .has-success {
-  .chosen-form-control-validation(@state-success-text; @state-success-bg);
+  .chosen-form-control-validation(@state-success-text; @white);
 }
 
 .has-warning {
-  .chosen-form-control-validation(@state-warning-text; @state-warning-bg);
+  .chosen-form-control-validation(@state-warning-text; @white);
 }
 
 .has-error {
-  .chosen-form-control-validation(@state-danger-text; @state-danger-bg);
+  .chosen-form-control-validation(@state-danger-text; @white);
 }
 
 .chosen-container.chosen-container-active {
@@ -77,6 +79,8 @@
 
   .chosen-container {
     background-color: @background-color;
+    box-shadow: none;
+    -webkit-box-shadow: none;
   }
   /* @group Multi Chosen */
   .chosen-choices li {
