--- a/data/styles/base/custom/custom-mixins.less
+++ b/data/styles/base/custom/custom-mixins.less
@@ -24,6 +24,12 @@
       }
     }
   }
+  .form-control {
+    background-color: @background-color;
+  }
+  .input-group-addon {
+    background-color: @background-color;
+  }
 }
 
 //generate sidebar colors
