--- a/data/styles/base/custom/mod_form_elements.less
+++ b/data/styles/base/custom/mod_form_elements.less
@@ -329,15 +329,15 @@ input[type="radio"] {
 
 // Feedback states
 .has-success {
-  .mod-form-control-validation(@state-success-bg);
+  .mod-form-control-validation(@white);
 }
 
 .has-warning {
-  .mod-form-control-validation(@state-warning-bg);
+  .mod-form-control-validation(@white);
 }
 
 .has-error {
-  .mod-form-control-validation(@state-danger-bg);
+  .mod-form-control-validation(@white);
 }
 
 select.form-control {
